crates/elm-codegen-derive-tests/tests/compile_fail/externally_tagged_enum.rs
use elm_codegen_core::ElmType;

#[derive(ElmType)]
#[elm(module = "Api.Event")]
pub enum Event {
    Click { x: i32, y: i32 },
    Scroll(f32),
}

fn main() {}
